# cas-karpenter-migrator

./: README.md  deployment.py  kubeconfig.py  main.py  pyproject.toml  reader.py  requirements.txt
.github/workflows/: main.yml
src/migrator/: __main__.py  data.py  deployment.py  kube_actions.py  kubeconfig.py  kuber.py  nodegroup.py  reader.py  scaler.py  scaling_actions.py
tests/: config.yaml  test_nodegroups.py  test_reader.py
workflows/: main.yml
