[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # whitespace
    "W",
    # list comprehensions
    "C4",
    # Code simplification
    "SIM",
    # Type checking
    "TCH"
]

[tool.poetry]
name = "cas-karpenter-migrator"
version = "0.1.0"
description = "Tool for automating the migration from Kubernetes Cluster AutoScaler to Karpenter"
authors = ["ckeragala <chamarakera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "28.1.0"
loguru = "0.7.2"
pyyaml = "6.0.1"
boto3 = "1.34.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
